devops/traefik-proxy/templates/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: my-plugindemo
spec:
  plugin:
    example:
      Headers:
        Foo: Bar
