devops/traefik-proxy/templates/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: identity

spec:
  entryPoints:
    - web
  routes:
  - match: PathPrefix(`/identity`)
    kind: Rule
    middlewares:
    - name: my-plugindemo
    services:
    - name: identity-service
      namespace: development
      port: 80
      kind: Service
